--- a/HAMZA_PFE/HAMZA_PFE.csproj
+++ b/HAMZA_PFE/HAMZA_PFE.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <ApplicationIcon>wpfui-icon.ico</ApplicationIcon>
+    <ApplicationIcon>cyber-security-icon.ico</ApplicationIcon>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -21,13 +21,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\cyber-security-icon.png" />
     <None Remove="Assets\wpfui-icon-256.png" />
     <None Remove="Assets\wpfui-icon-1024.png" />
+    <None Remove="cyber-security-icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\cyber-security-icon.png" />
     <Resource Include="Assets\wpfui-icon-256.png" />
     <Resource Include="Assets\wpfui-icon-1024.png" />
+    <Content Include="cyber-security-icon.ico" />
   </ItemGroup>
 
 </Project>
